# LABSoft

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  build.sh  docker-compose.yaml  run.ps1
data/circuit checker/: 121125_test  121125_test.labacc  1_test.labacc  2202_le2.labacc  923_1.labacc  923_1.labacc.result  923_2.labacc  923_3.labacc  923_4.labacc  924_1.labacc  and.labdcc  cpe2101_cap200hz.labacc  cpe2101_cap200hz.labacc.result  cpea2101_rlcseries.labacc  or.labdcc  von_test  (+16 more)
src/: CMakeLists.txt  LABSoft.cpp  LABSoft.h  main.cpp
src/LAB/: LAB.cpp  LAB.h  LAB_Digital_Circuit_Checker.cpp  LAB_Digital_Circuit_Checker.h  LAB_Function_Generator.cpp  LAB_Function_Generator.h  LAB_Logic_Analyzer.cpp  LAB_Logic_Analyzer.h  LAB_Module.cpp  LAB_Module.h  LAB_Ohmmeter.cpp  LAB_Ohmmeter.h  LAB_Oscilloscope.cpp  LAB_Oscilloscope.h  LAB_Oscilloscope_Trigger.cpp  LAB_Oscilloscope_Trigger.h  LAB_Software_Navigation.cpp  LAB_Software_Navigation.h  LAB_Voltmeter.cpp  LAB_Voltmeter.h
src/LAB/Software/: LAB_Analog_Circuit_Checker.cpp  LAB_Analog_Circuit_Checker.h  LAB_Calibration.cpp  LAB_Calibration.h  LAB_Data_Measurer.cpp  LAB_Data_Measurer.h  LAB_Exporter.cpp  LAB_Exporter.h  LAB_LABChecker_Analog.cpp  LAB_LABChecker_Analog.h  LAB_LABChecker_Digital.cpp  LAB_LABChecker_Digital.h  LAB_Oscilloscope_Display.cpp  LAB_Oscilloscope_Display.h  LAB_Shortcuts.cpp  LAB_Shortcuts.h
src/LABSoft_GUI/: LABSoft_GUI.cpp  LABSoft_GUI.fl  LABSoft_GUI.h  LABSoft_GUI_Analog_Circuit_Checker_Display.cpp  LABSoft_GUI_Analog_Circuit_Checker_Display.h  LABSoft_GUI_Exporter_Data_Table.cpp  LABSoft_GUI_Fl_Choice_With_Scroll.cpp  LABSoft_GUI_Fl_Input.cpp  LABSoft_GUI_Fl_Input_Choice_With_Scroll.cpp  LABSoft_GUI_Fl_Slider.cpp  LABSoft_GUI_LABChecker_Analog_Checker_Display.cpp  LABSoft_GUI_LABChecker_Analog_Checker_Display.h  LABSoft_GUI_LABChecker_Digital_Input_Table.cpp  LABSoft_GUI_LABChecker_Digital_Input_Table.h  LABSoft_GUI_LABChecker_Digital_Output_Table.cpp  LABSoft_GUI_Logic_Analyzer_Add_Channel_Signal_Window.cpp  LABSoft_GUI_Logic_Analyzer_Display.cpp  LABSoft_GUI_Logic_Analyzer_Display.h  LABSoft_GUI_Oscilloscope_Calibration_Table.cpp  LABSoft_GUI_Oscilloscope_Display.cpp  LABSoft_GUI_Oscilloscope_Display.h  LABSoft_GUI_Oscilloscope_Internal_Display.cpp  LABSoft_GUI_Oscilloscope_Internal_Display.h  LABSoft_GUI_Sheet.cpp  LABSoft_GUI_Sheet.h
src/LABSoft_GUI/FLUID References/: LABSoft_GUI_Logic_Analyzer_Add_Channel_Window.cpp  LABSoft_GUI_Oscilloscope_Display.cpp
src/LABSoft_GUI/Waveform Display/: LABSoft_GUI_Waveform_Display.cpp
src/LABSoft_Presenter/: LABSoft_Presenter.cpp  LABSoft_Presenter.h  LABSoft_Presenter_Digital_Circuit_Checker.cpp  LABSoft_Presenter_Function_Generator.cpp  LABSoft_Presenter_Logic_Analyzer.cpp  LABSoft_Presenter_Logic_Analyzer.h  LABSoft_Presenter_Ohmmeter.cpp  LABSoft_Presenter_Oscilloscope.cpp  LABSoft_Presenter_Oscilloscope.h  LABSoft_Presenter_Software_Navigation.cpp  LABSoft_Presenter_Software_Navigation.h  LABSoft_Presenter_Unit.cpp  LABSoft_Presenter_Voltmeter.cpp
src/LABSoft_Presenter/Software/: LABSoft_Presenter_Analog_Circuit_Checker.cpp  LABSoft_Presenter_Analog_Circuit_Checker.h  LABSoft_Presenter_Calibration.cpp  LABSoft_Presenter_Exporter.cpp  LABSoft_Presenter_LABChecker_Analog.cpp  LABSoft_Presenter_LABChecker_Analog.h  LABSoft_Presenter_LABChecker_Analog_Display.cpp  LABSoft_Presenter_LABChecker_Analog_Display.h  LABSoft_Presenter_LABChecker_Digital.cpp  LABSoft_Presenter_LABChecker_Digital.h  LABSoft_Presenter_Main_Window.cpp  LABSoft_Presenter_Oscilloscope_Display.cpp  LABSoft_Presenter_Shortcuts.cpp  LABSoft_Presenter_Shortcuts.h
src/LAB_Libraries/: LAB_AD9833.cpp  LAB_MCP23S17.cpp  LAB_MCP4XXX.cpp
src/Utility/: LABSoft_GUI_Label.cpp  LABSoft_GUI_Label_Values.h  LAB_Constants.h  LAB_Defaults.cpp  LAB_Defaults.h  LAB_Definitions.h  LAB_Encryptor.cpp  LAB_Enumerations.h  LAB_Utility_Functions.cpp  encrypt.cpp
(+6 files in other folders)
